# packmol-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pypackmol-f2pywrappers2.f90  pypackmolmodule.c
src/: __init__.py  packmol.py
